[gd_scene load_steps=2 format=3 uid="uid://bsrv17xsoawvy"]

[ext_resource type="Script" uid="uid://biyc18wwm2q4u" path="res://scripts/ui/unit_mgmt/ReinforcementPanel.gd" id="1"]

[node name="ReinforcementPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Root" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="Root"]
layout_mode = 2

[node name="Title" type="Label" parent="Root/Header"]
layout_mode = 2
text = "Reinforcements"

[node name="PoolLabel" type="Label" parent="Root/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
horizontal_alignment = 2
text = "Pool: 0 / 0"

[node name="RowsBox" type="VBoxContainer" parent="Root"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="Footer" type="HBoxContainer" parent="Root"]
layout_mode = 2

[node name="ResetBtn" type="Button" parent="Root/Footer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"

[node name="Spacer" type="Control" parent="Root/Footer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CommitBtn" type="Button" parent="Root/Footer"]
unique_name_in_owner = true
layout_mode = 2
text = "Commit"